--- a/Sources/GrowKit/ChatKit/Builder/SequencesViewController.xib
+++ b/Sources/GrowKit/ChatKit/Builder/SequencesViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SequencesViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SequencesViewController" customModule="GrowthKit">
             <connections>
                 <outlet property="tableView" destination="Yfi-rw-Hy7" id="VVm-Jh-iir"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
