--- a/Sources/GrowKit/ChatKit/Builder/SequenceCell.xib
+++ b/Sources/GrowKit/ChatKit/Builder/SequenceCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="qKh-BI-1dn" customClass="SequenceCell" customModule="GrowthKit">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="qKh-BI-1dn" customClass="SequenceCell" customModule="GrowKit">
             <rect key="frame" x="0.0" y="0.0" width="417" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qKh-BI-1dn" id="wW9-jq-Vq1">
